// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentWithUser renders the page 1`] = `
<div>
  <div
    class="measure-6"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-6 font-heading-lg line-height-sans-2"
      tabindex="-1"
    >
      Settings
    </h1>
    <div
      class="display-flex flex-align-end margin-top-6 margin-bottom-3"
    >
      <h3
        class="flex-fill margin-right-1 font-heading-md text-bold"
      >
        Account information
      </h3>
    </div>
    <div
      class="margin-bottom-2 padding-bottom-2 display-flex flex-justify"
    >
      <div
        class="margin-right-2"
      >
        <h3
          class="margin-bottom-1 font-heading-xs text-bold"
        >
          Email address
        </h3>
        mock@gmail.com
      </div>
    </div>
    <div
      class="display-flex flex-align-end margin-top-6 margin-bottom-3"
    >
      <h3
        class="flex-fill margin-right-1 font-heading-md text-bold"
      >
        Additional login verification
      </h3>
    </div>
    <p>
      Make your account more secure by providing a phone number to associate with your account. We'll send you a 6-digit code whenenever we need to verify it's really you. You’ll need to enter the code in order to log in to your account. In the future, you’ll also be able to access sensitive information like tax documents once you set this up.
    </p>
    <p>
      You will need to provide a phone number that can receive text messages (SMS) and that you’ll have consistent access to in case we need to verify your login.
    </p>
    <p>
      <strong>
        Additional login verification is not enabled
      </strong>
    </p>
    <a
      class="usa-button"
      href="/applications"
    >
      Add phone number
    </a>
  </div>
</div>
`;

exports[`ComponentWithUser when MFA is enabled shows MFA configuration 1`] = `
<div>
  <div
    class="measure-6"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-6 font-heading-lg line-height-sans-2"
      tabindex="-1"
    >
      Settings
    </h1>
    <div
      class="display-flex flex-align-end margin-top-6 margin-bottom-3"
    >
      <h3
        class="flex-fill margin-right-1 font-heading-md text-bold"
      >
        Account information
      </h3>
    </div>
    <div
      class="margin-bottom-2 padding-bottom-2 display-flex flex-justify"
    >
      <div
        class="margin-right-2"
      >
        <h3
          class="margin-bottom-1 font-heading-xs text-bold"
        >
          Email address
        </h3>
        mock@gmail.com
      </div>
    </div>
    <div
      class="display-flex flex-align-end margin-top-6 margin-bottom-3"
    >
      <h3
        class="flex-fill margin-right-1 font-heading-md text-bold"
      >
        Additional login verification
      </h3>
    </div>
    <p>
      To protect your security, we'll send you a 6-digit code whenenever we need to verify it's really you. You’ll need to enter the code in order to log in to your account.
    </p>
    <div
      class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
    >
      <div
        class="margin-right-2"
      >
        <h3
          class="margin-bottom-1 font-heading-xs text-bold"
        >
          Additional login verification is enabled
        </h3>
      </div>
      <button
        class="usa-button position-relative width-auto display-flex usa-button--unstyled"
        type="button"
      >
        <strong>
          Edit
        </strong>
      </button>
    </div>
    <div
      class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
    >
      <div
        class="margin-right-2"
      >
        <h3
          class="margin-bottom-1 font-heading-xs text-bold"
        >
          Phone number
        </h3>
        ***-***-1234
      </div>
      <a
        aria-label="Edit: Phone number"
        class="usa-link"
        href="/applications"
      >
        Edit
      </a>
    </div>
  </div>
</div>
`;
